[package]
name = "ws_common"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
semver = { version = "1", features = ["serde"] }
base64 = "0.21"
http = "0.2.9"
hyper = { version = "0.14", features = ["full"] }
ed25519-dalek = { version = "2", features = ["serde", "rand_core", "zeroize"] }
strum = { version = "0.25.0", features = ["derive"] }
url = { version = "2", features = ["serde"] }
axum = { version = "0.6.20", features = ["http2"] }
log = "0.4.18"
env_logger = "0.10.0"
config = { version = "0.13", features = ["json5"] }
